--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "d3": "^5.15.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-query": "^3.34.7",
     "react-scripts": "3.3.0"
   },
   "scripts": {
