--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-query": "^3.34.7",
+    "react-router": "^6.2.1",
     "react-scripts": "3.3.0"
   },
   "scripts": {
