--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 # testing
 /coverage
 
+
+
 # production
 /build
 
@@ -17,6 +19,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
+/.vscode
 
 npm-debug.log*
 yarn-debug.log*
